---
source: crates/iota-swarm-config/tests/snapshot_tests.rs
expression: genesis.iota_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 38
system_state_version: 1
iota_treasury_cap:
  inner:
    id:
      id: "0x1941e90e0a3e6f775573305ef77f493ffbe9a1d49734b55e935b451af69b287e"
    total_supply:
      value: "751500000000000000"
validators:
  total_stake: 1500000000000000
  active_validators:
    - metadata:
        iota_address: "0xb877dacaef0724a0a155ad7c6ae1289580b96646aef3caafd6ebcb1bcf8bd13f"
        authority_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        protocol_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 185
          - 60
          - 204
          - 156
          - 218
          - 197
          - 31
          - 107
          - 109
          - 84
          - 191
          - 98
          - 196
          - 9
          - 17
          - 141
          - 243
          - 38
          - 4
          - 23
          - 37
          - 149
          - 114
          - 51
          - 168
          - 186
          - 243
          - 141
          - 189
          - 48
          - 40
          - 187
          - 147
          - 104
          - 20
          - 211
          - 60
          - 160
          - 197
          - 136
          - 139
          - 70
          - 112
          - 193
          - 80
          - 163
          - 186
          - 226
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        next_epoch_authority_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        extra_fields:
          id:
            id: "0xecfa5b8440397aef64ae50f77a575b50793be57403d7c16cb4e527202f37fcff"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x99dae40c7bf16be9bacc4135f75f85900961474e631f8f22a08cce25309dc350"
      gas_price: 1000
      staking_pool:
        id: "0x579b6651780db6075dcb415ebb9f87f30f7f8b081891a656d26825ed17a75f18"
        activation_epoch: 0
        deactivation_epoch: ~
        iota_balance: 1500000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 1500000000000000
        exchange_rates:
          id: "0x01b6fdd0ba0a7ec2b3a7dd15c577d1ddeebd38fcb78d11c1d6e82b93f7e496ca"
          size: 1
        pending_stake: 0
        pending_total_iota_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x9d061e9cc1b602ac50ec374f71de080a78c5dc0c627a8f19a54e25949eed2ec5"
          size: 0
      commission_rate: 200
      next_epoch_stake: 1500000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x7c6fba44faf92ff1330316712dbd76af08f733890d45d290344ef17a3654f5ba"
        size: 0
  pending_active_validators:
    contents:
      id: "0xe86f88fb3d6d62de89196b67394922866ad310fbdeb0f73549820104461588b5"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xe365fc501ace10426aaf202db21ddffd16d878d2b6caaf6d40ea53c9b1e2d12e"
    size: 1
  inactive_validators:
    id: "0x9394436c55eb21c3fc81fedf23dd0109d5584c8e2a269b8a1d3148ebd1406a5e"
    size: 0
  validator_candidates:
    id: "0xeec9977a2fc32adb37c6ac35ec4a1a24641479afa31a6dfeb55f9da369b0c8ee"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x098480a5c995d207225bdb74a60c059480141ef4f416cf79a3e354d4a39d552c"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  min_validator_count: 0
  max_validator_count: 0
  min_validator_joining_stake: 0
  validator_low_stake_threshold: 0
  validator_very_low_stake_threshold: 0
  validator_low_stake_grace_period: 0
  extra_fields:
    id:
      id: "0x6a357fb8aa9ddb970f19e1254cd1167489ab0bba9a059f0b202d2e24d2b4545a"
    size: 0
iota_system_admin_cap:
  dummy_field: false
reference_gas_price: 1000
validator_report_records:
  contents: []
safe_mode: false
safe_mode_storage_charges:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x0c122f0729480bec33b3c01ec683ccf6b46d22c1c882fc73d9448bc9408e5ece"
  size: 0
